--- a/style.css
+++ b/style.css
@@ -17,7 +17,16 @@ body {
    padding: 0;
    min-height: 100vh;
 }
+#skills ul {
+   text-align: center;
+   list-style: none;
+   padding: 0;
+}
 
+#skills li {
+   display: inline-block;
+   margin: 5px 15px;
+}
 .container {
    width: var(--container-width);
    max-width: 1200px;
@@ -181,4 +190,11 @@ footer {
 .btn:hover {
    background-color: var(--secondary-color);
    transform: scale(1.1);
+}
+section:not(#about) {
+   transition: transform 0.3s ease-in-out;
+}
+
+section:not(#about):hover {
+   transform: scale(1.02);
 }
